Modificado titulo en index desde GitHub

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta name="description" content="En GAMERSHOP somos líder en componentes de PC para gaming, brindando calidad, rapidez y seguridad a nuestros clientes.">
 
         <!-- open graph protocol -->
-        <meta property="og:title" content="GAMERSHOP - Todo en informatica y componentes.">
+        <meta property="og:title" content="GAMERSHOP - Todo lo mejor en informatica y componentes.">
         <meta property="og:image" content="./Imagenes/Banner.webp">
         <meta property="og:description" content="En GAMERSHOP somos líder en componentes de PC para gaming, brindando calidad, rapidez y seguridad a nuestros clientes.">
         <meta property="og:url" content="https://gamershop.com" >
