--- a/Carpetas/listas.html
+++ b/Carpetas/listas.html
@@ -81,34 +81,12 @@
 
         </header>
 
-
-    <ol> <!-- lista ordenada -->
-    <li>Limpiar mate</li>
-    <li>Poner yerba</li>
-    <li>Verter agua caliente</li>
-    <li>Cebar</li>
-    </ol>
-    
-    <ul> <!-- lista sin orden -->
-        <li>Julián</li>
-        <li>Andres</li>
-
-    </ul>
-
-    <a href="#internet"> Internet</a>
-
-    <h2>Servicios</h2>
-    <li>
-    <h3 id="internet">internet</h3>
-    <ul>
         
-            <ul> 50mb</ul>
-            <ul>100mb</ul>
-            <ul>300mg</ul>  
-    </ul>
-    </li>
+        <section class="benchmark__texto1">
+          <h2>Cómo medir el rendimiento de la GPU o Tarjeta Gráfica</h2>
+          <p> Para evaluar el rendimiento de una tarjeta gráfica es primordial el uso de un benchmark, ya sea mediante algún juego que tenga la herramienta de benchmark incorporada o mediante test sintéticos que estén especializados en algún ámbito en concreto. Habitualmente se suelen combinar ambas herramientas para evaluar el rendimiento de una tarjeta gráfica, ya sea de portátil o de sobremesa, ya que mediante el uso de varios de ellos se complementa la información que obtenemos. </p>
+          </section>
 
-        <hr>
 
         <footer class="footer">
   
