--- a/Carpetas/Benchmark.html
+++ b/Carpetas/Benchmark.html
@@ -59,7 +59,7 @@
                         <a class="nav-link active" aria-current="page" href="./nosotros.html"> Nosotros </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="listas.html"> Listas</a>
+                        <a class="nav-link" href="Benchmark.html"> Listas</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="Contacto.html"> Contacto</a>
