--- a/Carpetas/Contacto.html
+++ b/Carpetas/Contacto.html
@@ -57,7 +57,7 @@
                         <a class="nav-link active" aria-current="page" href="./nosotros.html"> Nosotros </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="Benchmark.html"> Listas</a>
+                        <a class="nav-link" href="Benchmark.html"> Benchmark</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="Contacto.html"> Contacto</a>
