--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="nav-link active" aria-current="page" href=".//Carpetas/nosotros.html"> Nosotros </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="Carpetas/listas.html"> Benchmark</a>
+                        <a class="nav-link" href="Carpetas/Benchmark.html"> Benchmark</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="Carpetas/Contacto.html"> Contacto</a>
