--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         
             <footer class="footer">
   
-                <h4 class="footer__logochico"> <img src="./Imagenes/logos/logo_size_invert_4x4_chico.jpg"> </h4>
+                <h4 class="footer__logochico"> <img src="./Imagenes/logos/logo_size_invert_4x4_chico_2x1_remove.png"> </h4>
                 <p> Ubicacion</p>
                 <p>Telefono</p>
         
