--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </button>
   </div>
 
-        
+  <div class="inicio__textos">
     <section class="inicio__texto1">
     <h2>Bienvenidos a esta pagina</h2>
     <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem architecto qui impedit, soluta fuga eligendi dolore aut sint aliquam quia consequatur saepe inventore rem magni quidem at deserunt, officia debitis! </p>
@@ -127,7 +127,7 @@
     <h3 >Más sobre nosotros</h3>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laboriosam sint alias ab et quis ea illo, sunt inventore facere ipsa architecto! Similique quidem, officiis id adipisci voluptates laborum aspernatur.</p>
     </section>
-
+  </div>  
 
         
             <footer class="footer">
