--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 
   <div class="inicio__textos">
     <section class="inicio__texto1">
-    <h2>Bienvenidos a esta pagina</h2>
-    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem architecto qui impedit, soluta fuga eligendi dolore aut sint aliquam quia consequatur saepe inventore rem magni quidem at deserunt, officia debitis! </p>
+    <h2>Bienvenidos a nuestro mundo</h2>
+    <p> La mayor variedad de componentes y al mejor precio los encontrás sólo en GAMERSHOP. Los mejores precios, la mejor atención, envíos a todo el país y las personas que realmente saben y les gusta el mundo gaming, las encontrás acá, en <strong> GAMERSHOP </strong> .  </p>
     </section>
 
     <section class="inicio__texto2">
     <h3 >Más sobre nosotros</h3>
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laboriosam sint alias ab et quis ea illo, sunt inventore facere ipsa architecto! Similique quidem, officiis id adipisci voluptates laborum aspernatur.</p>
+    <p> Estamos en otro nivel. Nos dedicamos al mundo gamer especializándonos en la venta de hardware y particularmente GPU’s. Si queres lo mejor, lo vas a encontrar acá, en <strong>GAMERSHOP</strong>.</p>
     </section>
   </div>  
 
