--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <link rel="stylesheet" href=".//css/bootstrap.min.css">
         <script src="./js/bootstrap.js"></script>
 
+        <script src="https://kit.fontawesome.com/ab1153d08f.js" crossorigin="anonymous"></script>
+
         <link rel="stylesheet" href=".//styles/styles.css">
         <link rel="stylesheet" href=".//styles/styles.css.map">
 
@@ -133,13 +135,13 @@
             <footer class="footer">
   
                 <h4 class="footer__logochico"> <img src="./Imagenes/logos/logo_size_invert_4x4_chico_2x1_remove.png"> </h4>
-                <p> Ubicacion</p>
-                <p>Telefono</p>
+                <p> <img src="./Imagenes/iconos/icono_maps_chico.png"> Ubicacion</p>
+                <p><img src="./Imagenes/iconos/icono_whatsapp_chico.png" > 11 - 21937234</p>
         
                 <ul class="footer__redes">
-                    <li class="footer__redes--instagram">instagram</li>
-                    <li class="footer__redes--facebook">Facebook</li>
-                    <li class="footer__redes--mail">Email</li>
+                    <li > <img src="./Imagenes/iconos/icono_instagram_chico.png"> instagram </li>
+                    <li > <img src="./Imagenes/iconos/icono_facebook_chico.png"> Facebook</li>
+                    <li > <img src="./Imagenes/iconos/icono_mail_chico.png"> Email</li>
                 </ul>   
         
             </footer>
