--- a/Carpetas/Contacto.html
+++ b/Carpetas/Contacto.html
@@ -41,7 +41,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <a id="logo" class="navbar-brand" href="#"><img src="../Imagenes/logos/logo_size_4x1.jpg" alt="imagen__logo__4x1" ></a>
+                  <a id="logo" class="navbar-brand" href="../index.html"><img src="../Imagenes/logos/logo_size_2x1_remove.png" alt="imagen__logo__2x1" ></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
