Solucionados los lorem de pagina nosotros

--- a/Carpetas/nosotros.html
+++ b/Carpetas/nosotros.html
@@ -161,17 +161,36 @@
 
 <section id="sobre__nosotros" class="nosotros__texto1">
   <h2>Sobre Nosotros</h2>
-  <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem architecto qui impedit, soluta fuga eligendi dolore aut sint aliquam quia consequatur saepe inventore rem magni quidem at deserunt, officia debitis! </p>
+  <p> Somos una startup innovadora y digital, nos apasiona entregar soluciones de gaming, hardware y software a nuestros clientes más exigentes. Brindamos soluciones eficientes como empleados y reales como usuarios del mundo gaming. </p>
   </section>
 
   <section id="nuestra__calidad" class="nosotros__texto2">
   <h3>Nuestra Calidad</h3>
-  <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laboriosam sint alias ab et quis ea illo, sunt inventore facere ipsa architecto! Similique quidem, officiis id adipisci voluptates laborum aspernatur.</p>
+  <p> En <strong>GAMERSHOP</strong> damos soluciones de punta a punta porque entendemos que solo vender hardware no es suficiente, estamos para resolver tus dudas o problemas con los productos que vendemos, para que nada te preocupe y uses lo que tanto quisiste lo antes posible.  </p>
   </section>
 
   <section id="preguntas__frecuentes" class="nosotros__texto2">
     <h3>Preguntas Frecuentes</h3>
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laboriosam sint alias ab et quis ea illo, sunt inventore facere ipsa architecto! Similique quidem, officiis id adipisci voluptates laborum aspernatur.</p>
+    <p> 
+      <strong> ¿Cómo hago un pedido? </strong> Para armar un pedido simplemente vas agregando al carrito todos los productos que queres, y al finalizar pones comprar. En el 1er paso te pregunta si necesitas envío, luego la forma de pago, luego accedes como cliente o creas un cliente nuevo según corresponda confirmas el pedido y te asigna un número de pedido y te da los datos de pago según corresponda.
+    </p>
+    <p>
+      <strong> ¿Son precios Finales o más IVA? </strong> Todos los precios son finales IVA incluido.
+    </p>
+    <p>
+      <strong> ¿Los precios publicados en la web en que moneda están? </strong> Todos los precios de la web están expresados en pesos argentinos.
+    </p>
+    <p>
+      <strong> ¿Que costo tiene un envío? </strong> El costo del mismo se abona con el pedido, es decir, el pedido incluye el costo del envío. El valor del envío depende de las dimensiones del paquete y distancia. Podrás saber el costo del envío en tiempo real desde www.compragamer.com ingresando tu código postal en el producto a adquirir o a tu pedido. Y según el pedido desde la misma web se le informa si es bonificado el mismo.
+    </p>
+    <p>
+      <strong>¿Hacen envíos al interior? </strong> Hacemos envíos a todo el país mediante OCA, que es un servicio Puerta a Puerta (puede llegar a tu domicilio o a la sucursal de OCA más cercana a tu domicilio).
+    </p>
+    <p>
+      <strong> ¿Hacen factura A? ¿Cómo la solicito? </strong>  Efectivamente hacemos factura A, y en el caso de ser un cliente nuevo tiene que ingresar el cliente con número de CUIT y en las observaciones del pedido aclarar que es con factura A.
+    </p>
+
+
     </section>
   
 
