solucionado footer en todas las paginas

--- a/Carpetas/Benchmark.html
+++ b/Carpetas/Benchmark.html
@@ -91,19 +91,40 @@
 
 
 
-        <footer class="footer">
+          <footer class="footer">
   
-          <h4 class="footer__logochico"> <img src="../Imagenes/logos/logo_size_invert_4x4_chico.jpg"> </h4>
-          <p> Ubicacion</p>
-          <p>Telefono</p>
-  
-          <ul class="footer__redes">
-              <li class="footer__redes--instagram">instagram</li>
-              <li class="footer__redes--facebook">Facebook</li>
-              <li class="footer__redes--mail">Email</li>
-          </ul>   
-  
-      </footer>
+            <h4 class="footer__logochico"> <img src="../Imagenes/logos/logo_size_invert_4x4_chico.jpg"> </h4>
+            <a 
+              href="https://goo.gl/maps/58sdGuhWp7nuVtB98" > <img src="../Imagenes/iconos/icono_maps_chico.png"> Estados Unidos 2173, CABA, Argentina
+            </a>
+            <a>
+              <img src="../Imagenes/iconos/icono_whatsapp_chico.png" > 11-21937234
+            </a>
+    
+            <ul class="footer__redes">
+                <li> 
+                  <a 
+                    class="footer__redes--instagram" href="https://www.instagram.com/?hl=es" > <img src="../Imagenes/iconos/icono_instagram_chico.png"> juliimatta 
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer__redes--facebook" href="https://www.facebook.com/" > <img src="../Imagenes/iconos/icono_facebook_chico.png"> Julian Matta
+                  </a>
+                </li>
+                <li> 
+                  <a
+                    class="footer__redes--linkedin" href="https://www.linkedin.com/in/julian-matta-rotili-411404169/" > <img src="../Imagenes/iconos/icono_linkedin_chico.png"> Julian Matta 
+                  </a>
+                </li>
+                <li> 
+                  <a
+                    class="footer__redes--mail" href="https://outlook.live.com/mail/0/inbox/id/AQMkADAwATY0MDABLWM2YTItMTU1ADctMDACLTAwCgBGAAADwK2kQGVjm0OwdGSzjU3QUwcAzF36PDZmAkulpwFfLa%2FiXAAAAgEMAAAAzF36PDZmAkulpwFfLa%2FiXAAFcMxT7QAAAA%3D%3D" > <img src="../Imagenes/iconos/icono_mail_chico.png"> j.a.matta@hotmail.com 
+                  </a> 
+                </li>
+            </ul>   
+    
+        </footer>
 
 
     </body>
