cambio de title

--- a/Carpetas/Benchmark.html
+++ b/Carpetas/Benchmark.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://gamershop.com" >
   
   
-        <title> GAMERSHOP - Todo lo mejor en informatica y componentes. </title>
+        <title> GAMERSHOP | Todo lo mejor en informatica y componentes. </title>
   
           <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,300;1,400&display=swap" rel="stylesheet">
           <link rel="preconnect" href="https://fonts.googleapis.com">
