reaparado responsive en pagina nosotros

--- a/Carpetas/nosotros.html
+++ b/Carpetas/nosotros.html
@@ -75,63 +75,9 @@
           </nav>
 
     </header>
-    <!-- <main id="nosotros" class="contenido-principal">
-      <h2>Nosotros</h2>
-
-      <div class="grilla">
-        <article class="galeriaproductos">
-          <h3>Nvidia 3060</h3>
-          <img src="../Imagenes/img_nvidia_asus_3060.jpg" alt="imagen_placa_video">
-          <p> <strong>Precio</strong> $120.000 </p>
-          
-        </article>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi beatae porro ea eaque architecto molestiae minima placeat, sit quaerat nesciunt aut, modi itaque voluptates alias repudiandae quis, doloremque nobis a?</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi beatae porro ea eaque architecto molestiae minima placeat, sit quaerat nesciunt aut, modi itaque voluptates alias repudiandae quis, doloremque nobis a?</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi beatae porro ea eaque architecto molestiae minima placeat, sit quaerat nesciunt aut, modi itaque voluptates alias repudiandae quis, doloremque nobis a?</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi beatae porro ea eaque architecto molestiae minima placeat, sit quaerat nesciunt aut, modi itaque voluptates alias repudiandae quis, doloremque nobis a?</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi beatae porro ea eaque architecto molestiae minima placeat, sit quaerat nesciunt aut, modi itaque voluptates alias repudiandae quis, doloremque nobis a?</p>
-          
-      <article>
-          <img src="./img/banner-medio.jpg" >
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis exercitationem expedita perferendis voluptatum ea, nemo cumque eaque laborum delectus, est sequi qui odit sapiente officiis deleniti placeat aliquid at beatae.
-          </p>
-      </article>
-  
-  </div>
-  </main> -->
-
-
-  <!-- <main id="nosotros" class="contenido-principal">
-    <div class="grilla">
-  <div class="card" style="width: 18rem;">
-    <img src="../Imagenes/img_nvidia_asus_3060.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="../Imagenes/img_nvidia_asus_3060.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="../Imagenes/img_nvidia_asus_3060.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-</div>
-</main> -->
 
 <section class="nosotros__sobrenosotros">
-<div class="sobrenosotros__carta card" style="width: 24remm;">
+<div class="sobrenosotros__carta card" style="width: 20remm;">
   <div class="card-body">
     <h4 class="card-title">Digitalización</h4>
     <h6 class="card-subtitle mb-2 text-muted">-----------</h6>
@@ -139,7 +85,7 @@
   </div>
 </div>
 
-<div class="sobrenosotros__carta card" style="width: 24rem;">
+<div class="sobrenosotros__carta card" style="width: 20rem;">
   <div class="card-body">
     <h4 class="card-title">Transparencia</h4>
     <h6 class="card-subtitle mb-2 text-muted">-----------</h6>
@@ -148,7 +94,7 @@
   </div>
 </div>
 
-<div class="sobrenosotros__carta card" style="width: 24rem;">
+<div class="sobrenosotros__carta card" style="width: 20rem;">
   <div class="card-body">
     <h4 class="card-title">Seguridad</h4>
     <h6 class="card-subtitle mb-2 text-muted">-----------</h6>
@@ -159,40 +105,45 @@
 
 </section>
 
-<section id="sobre__nosotros" class="nosotros__texto1">
+
+<section class="nosotros__textos">
+
+  <article id="sobre__nosotros" class="nosotros__texto1">
   <h2>Sobre Nosotros</h2>
-  <p> Somos una startup innovadora y digital, nos apasiona entregar soluciones de gaming, hardware y software a nuestros clientes más exigentes. Brindamos soluciones eficientes como empleados y reales como usuarios del mundo gaming. </p>
-  </section>
-
-  <section id="nuestra__calidad" class="nosotros__texto2">
-  <h3>Nuestra Calidad</h3>
-  <p> En <strong>GAMERSHOP</strong> damos soluciones de punta a punta porque entendemos que solo vender hardware no es suficiente, estamos para resolver tus dudas o problemas con los productos que vendemos, para que nada te preocupe y uses lo que tanto quisiste lo antes posible.  </p>
-  </section>
-
-  <section id="preguntas__frecuentes" class="nosotros__texto2">
-    <h3>Preguntas Frecuentes</h3>
-    <p> 
-      <strong> ¿Cómo hago un pedido? </strong> Para armar un pedido simplemente vas agregando al carrito todos los productos que queres, y al finalizar pones comprar. En el 1er paso te pregunta si necesitas envío, luego la forma de pago, luego accedes como cliente o creas un cliente nuevo según corresponda confirmas el pedido y te asigna un número de pedido y te da los datos de pago según corresponda.
-    </p>
-    <p>
-      <strong> ¿Son precios Finales o más IVA? </strong> Todos los precios son finales IVA incluido.
-    </p>
-    <p>
-      <strong> ¿Los precios publicados en la web en que moneda están? </strong> Todos los precios de la web están expresados en pesos argentinos.
-    </p>
-    <p>
-      <strong> ¿Que costo tiene un envío? </strong> El costo del mismo se abona con el pedido, es decir, el pedido incluye el costo del envío. El valor del envío depende de las dimensiones del paquete y distancia. Podrás saber el costo del envío en tiempo real desde www.compragamer.com ingresando tu código postal en el producto a adquirir o a tu pedido. Y según el pedido desde la misma web se le informa si es bonificado el mismo.
-    </p>
-    <p>
-      <strong>¿Hacen envíos al interior? </strong> Hacemos envíos a todo el país mediante OCA, que es un servicio Puerta a Puerta (puede llegar a tu domicilio o a la sucursal de OCA más cercana a tu domicilio).
-    </p>
-    <p>
-      <strong> ¿Hacen factura A? ¿Cómo la solicito? </strong>  Efectivamente hacemos factura A, y en el caso de ser un cliente nuevo tiene que ingresar el cliente con número de CUIT y en las observaciones del pedido aclarar que es con factura A.
-    </p>
-
-
-    </section>
+    <p> Somos una startup innovadora y digital, nos apasiona entregar soluciones de gaming, hardware y software a nuestros clientes más exigentes. Brindamos soluciones eficientes como empleados y reales como usuarios del mundo gaming. </p>
+    </article>
   
+    <article id="nuestra__calidad" class="nosotros__texto2">
+    <h3>Nuestra Calidad</h3>
+    <p> En <strong>GAMERSHOP</strong> damos soluciones de punta a punta porque entendemos que solo vender hardware no es suficiente, estamos para resolver tus dudas o problemas con los productos que vendemos, para que nada te preocupe y uses lo que tanto quisiste lo antes posible.  </p>
+    </article>
+  
+    <article id="preguntas__frecuentes" class="nosotros__texto2">
+      <h3>Preguntas Frecuentes</h3>
+      <p> 
+        <strong> ¿Cómo hago un pedido? </strong> Para armar un pedido simplemente vas agregando al carrito todos los productos que queres, y al finalizar pones comprar. En el 1er paso te pregunta si necesitas envío, luego la forma de pago, luego accedes como cliente o creas un cliente nuevo según corresponda confirmas el pedido y te asigna un número de pedido y te da los datos de pago según corresponda.
+      </p>
+      <p>
+        <strong> ¿Son precios Finales o más IVA? </strong> Todos los precios son finales IVA incluido.
+      </p>
+      <p>
+        <strong> ¿Los precios publicados en la web en que moneda están? </strong> Todos los precios de la web están expresados en pesos argentinos.
+      </p>
+      <p>
+        <strong> ¿Que costo tiene un envío? </strong> El costo del mismo se abona con el pedido, es decir, el pedido incluye el costo del envío. El valor del envío depende de las dimensiones del paquete y distancia. Podrás saber el costo del envío en tiempo real desde www.compragamer.com ingresando tu código postal en el producto a adquirir o a tu pedido. Y según el pedido desde la misma web se le informa si es bonificado el mismo.
+      </p>
+      <p>
+        <strong>¿Hacen envíos al interior? </strong> Hacemos envíos a todo el país mediante OCA, que es un servicio Puerta a Puerta (puede llegar a tu domicilio o a la sucursal de OCA más cercana a tu domicilio).
+      </p>
+      <p>
+        <strong> ¿Hacen factura A? ¿Cómo la solicito? </strong>  Efectivamente hacemos factura A, y en el caso de ser un cliente nuevo tiene que ingresar el cliente con número de CUIT y en las observaciones del pedido aclarar que es con factura A.
+      </p>
+      </article>
+  
+</section>
+
+  
+
 
     <footer class="footer">
   
