resuelto responsive de pagbenchmark

--- a/Carpetas/Benchmark.html
+++ b/Carpetas/Benchmark.html
@@ -77,11 +77,12 @@
 
         </header>
 
+        <main class="benchmark__textos">
+          <section class="benchmark__texto1">
+            <h2>Cómo medir el rendimiento de la GPU o Tarjeta Gráfica</h2>
+            <p> Para evaluar el rendimiento de una tarjeta gráfica es primordial el uso de un benchmark, ya sea mediante algún juego que tenga la herramienta de benchmark incorporada o mediante test sintéticos que estén especializados en algún ámbito en concreto. Habitualmente se suelen combinar ambas herramientas para evaluar el rendimiento de una tarjeta gráfica, ya sea de portátil o de sobremesa, ya que mediante el uso de varios de ellos se complementa la información que obtenemos. </p>
+          </section>
         
-        <section class="benchmark__texto1">
-          <h2>Cómo medir el rendimiento de la GPU o Tarjeta Gráfica</h2>
-          <p> Para evaluar el rendimiento de una tarjeta gráfica es primordial el uso de un benchmark, ya sea mediante algún juego que tenga la herramienta de benchmark incorporada o mediante test sintéticos que estén especializados en algún ámbito en concreto. Habitualmente se suelen combinar ambas herramientas para evaluar el rendimiento de una tarjeta gráfica, ya sea de portátil o de sobremesa, ya que mediante el uso de varios de ellos se complementa la información que obtenemos. </p>
-        </section>
 
 
         <section class="benchmark__acordeon">
@@ -221,7 +222,7 @@
 
         </section>
 
-
+      </main>
 
 
           <footer class="footer">
