solucionado alt en imagenes

--- a/Carpetas/Benchmark.html
+++ b/Carpetas/Benchmark.html
@@ -227,7 +227,7 @@
 
           <footer class="footer">
   
-            <h4 class="footer__logochico"> <img src="../Imagenes/logos/logo_size_invert_4x4_chico.jpg"> </h4>
+            <h4 class="footer__logochico"> <img src="../Imagenes/logos/logo_size_invert_4x4_chico.jpg" alt="logo chico"> </h4>
             <a 
               href="https://goo.gl/maps/58sdGuhWp7nuVtB98" > <img src="../Imagenes/iconos/icono_maps_chico.png"> Estados Unidos 2173, CABA, Argentina
             </a>
