--- a/Carpetas/nosotros.html
+++ b/Carpetas/nosotros.html
@@ -76,34 +76,37 @@
 
     </header>
 
-<section class="nosotros__sobrenosotros">
-<div class="sobrenosotros__carta card" style="width: 20remm;">
-  <div class="card-body">
-    <h4 class="card-title">Digitalización</h4>
-    <h6 class="card-subtitle mb-2 text-muted">-----------</h6>
-    <p class="card-text">Usamos el poder de la tecnología para facilitar la compra de componentes nuevos. Digitalizamos y simplificamos al máximo el proceso, para lograr una experiencia de usuario mucho más fácil.</p>
+<main class="nosotros__listacartas">
+
+  <section class="nosotros__sobrenosotros">
+    
+  <div class="sobrenosotros__carta card" style="width: 20remm;">
+    <div class="card-body">
+      <h4 class="card-title">Digitalización</h4>
+      <h6 class="card-subtitle mb-2 text-muted">-----------</h6>
+      <p class="card-text">Usamos el poder de la tecnología para facilitar la compra de componentes nuevos. Digitalizamos y simplificamos el proceso, para tener una experiencia mucho más fácil.</p>
+    </div>
   </div>
-</div>
-
-<div class="sobrenosotros__carta card" style="width: 20rem;">
-  <div class="card-body">
-    <h4 class="card-title">Transparencia</h4>
-    <h6 class="card-subtitle mb-2 text-muted">-----------</h6>
-    <p class="card-text">Queremos eliminar la desconfianza de este proceso. Garantizamos la calidad de nuestros productos y somos transparentes y claros en los costos reales en cada paso.</p>
-
+  
+  <div class="sobrenosotros__carta card" style="width: 20rem;">
+    <div class="card-body">
+      <h4 class="card-title">Transparencia</h4>
+      <h6 class="card-subtitle mb-2 text-muted">-----------</h6>
+      <p class="card-text">Queremos eliminar la desconfianza de este proceso. Garantizamos la calidad de nuestros productos y somos transparentes y claros en los costos reales en cada paso.</p>
+  
+    </div>
   </div>
-</div>
-
-<div class="sobrenosotros__carta card" style="width: 20rem;">
-  <div class="card-body">
-    <h4 class="card-title">Seguridad</h4>
-    <h6 class="card-subtitle mb-2 text-muted">-----------</h6>
-    <p class="card-text">Nuestra empresa y nuestro equipo profesional de agentes e inspectores te acompaña en todo el proceso, asegurando también pagos y cobranzas seguras.</p>
-
+  
+  <div class="sobrenosotros__carta card" style="width: 20rem;">
+    <div class="card-body">
+      <h4 class="card-title">Seguridad</h4>
+      <h6 class="card-subtitle mb-2 text-muted">-----------</h6>
+      <p class="card-text">Nuestra empresa y nuestro equipo profesional de agentes e inspectores te acompaña en todo el proceso, asegurando también pagos y cobranzas seguras.</p>
+  
+    </div>
   </div>
-</div>
-
-</section>
+  </section>
+</main>
 
 
 <section class="nosotros__textos">
@@ -147,7 +150,7 @@
 
     <footer class="footer">
   
-      <h4 class="footer__logochico"> <img src="../Imagenes/logos/logo_size_invert_4x4_chico.jpg"> </h4>
+      <h4 class="footer__logochico"> <img src="../Imagenes/logos/logo_size_invert_4x4_chico.jpg" alt="logo chico"> </h4>
       <a 
         href="https://goo.gl/maps/58sdGuhWp7nuVtB98" > <img src="../Imagenes/iconos/icono_maps_chico.png"> Estados Unidos 2173, CABA, Argentina
       </a>
