--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./Imagenes/Banner.webp" class="inicio__banner--principal d-block w-100" alt="...">
+        <img src="./Imagenes/Banner.webp" class="inicio__banner--principal d-block w-100" alt="banner nvidia 3080">
         <div class="carousel-caption d-none d-md-block">
           <h5>Nvidia RTX 3080 Ti</h5>
           <p>Lo mejor para Ultra-Gaming </p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./Imagenes/img_GPU.jpg" class="inicio__banner--principal d-block w-100" alt="...">
+        <img src="./Imagenes/img_GPU.jpg" class="inicio__banner--principal d-block w-100" alt="banner nvidia 3060">
         <div class="carousel-caption d-none d-md-block">
           <h5>Nvidia RTX 3060 Ti</h5>
           <p>Modelado y gaming explosivos.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./Imagenes/img_NVIDIA_portatil.jpg" class="inicio__banner--principal d-block w-100" alt="...">
+        <img src="./Imagenes/img_NVIDIA_portatil.jpg" class="inicio__banner--principal d-block w-100" alt="banner nvidia notebook">
         <div class="carousel-caption d-none d-md-block">
           <h5>Nvidia Notebook </h5>
           <p>Cualquier juego, a cualquier lado.</p>
@@ -120,12 +120,12 @@
 
   <div class="inicio__textos">
     <section class="inicio__texto1">
-    <h2>Bienvenidos a nuestro mundo</h2>
+    <h1>Bienvenidos a nuestro mundo</h1>
     <p> La mayor variedad de componentes y al mejor precio los encontrás sólo en GAMERSHOP. Los mejores precios, la mejor atención, envíos a todo el país y las personas que realmente saben y les gusta el mundo gaming, las encontrás acá, en <strong> GAMERSHOP </strong> .  </p>
     </section>
 
     <section class="inicio__texto2">
-    <h3 >Más sobre nosotros</h3>
+    <h2 >Más sobre nosotros</h2>
     <p> Estamos en otro nivel. Nos dedicamos al mundo gamer especializándonos en la venta de hardware y particularmente GPU’s. Si queres lo mejor, lo vas a encontrar acá, en <strong>GAMERSHOP</strong>.</p>
     </section>
   </div>  
