--- a/Carpetas/Benchmark.html
+++ b/Carpetas/Benchmark.html
@@ -49,13 +49,13 @@
                   <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="enlaces-nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html"> Inicio </a>
+                            <a class="nav-link" aria-current="page" href="../index.html"> Inicio </a>
                           </li>
                          <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="productos.html"> Productos </a>
+                        <a class="nav-link" aria-current="page" href="productos.html"> Productos </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="Benchmark.html"> Benchmark</a>
+                        <a class="nav-link active" href="Benchmark.html"> Benchmark</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="Contacto.html"> Contacto</a>
