--- a/Carpetas/Contacto.html
+++ b/Carpetas/Contacto.html
@@ -48,16 +48,16 @@
                   <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="enlaces-nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html"> Inicio </a>
+                            <a class="nav-link" aria-current="page" href="../index.html"> Inicio </a>
                           </li>
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="productos.html"> Productos </a>
+                        <a class="nav-link" aria-current="page" href="productos.html"> Productos </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="Benchmark.html"> Benchmark</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="Contacto.html"> Contacto</a>
+                        <a class="nav-link active" href="Contacto.html"> Contacto</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false" > 
