--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html"> Inicio </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Carpetas/productos.html"> Productos </a>
+                        <a class="nav-link" aria-current="page" href="Carpetas/productos.html"> Productos </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="Carpetas/Benchmark.html"> Benchmark</a>
